// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelsListItem renders component 1`] = `
<WithStyles(ForwardRef(ListItem))
  button={true}
  className="root-mock"
  disableGutters={true}
  onClick={[Function]}
>
  <WithStyles(ForwardRef(ListItemText))
    className="itemText-mock"
    classes={
      Object {
        "primary": "primary-mock",
      }
    }
    primary={
      <ForwardRef(WithStyles)
        alignItems="center"
        container={true}
      >
        <ForwardRef(WithStyles)
          item={true}
        >
          <ForwardRef(WithStyles)
            className="title-mock newMessages-mock"
            variant="body2"
          >
            # Channel 1
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
    }
  />
</WithStyles(ForwardRef(ListItem))>
`;

exports[`ChannelsListItem renders component when public 1`] = `
<WithStyles(ForwardRef(ListItem))
  button={true}
  className="root-mock"
  disableGutters={true}
  onClick={[Function]}
>
  <WithStyles(ForwardRef(ListItemText))
    className="itemText-mock"
    classes={
      Object {
        "primary": "primary-mock",
      }
    }
    primary={
      <ForwardRef(WithStyles)
        alignItems="center"
        container={true}
      >
        <ForwardRef(WithStyles)
          item={true}
        >
          <ForwardRef(WithStyles)
            className="title-mock"
            variant="body2"
          >
            # Channel 0
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
    }
  />
</WithStyles(ForwardRef(ListItem))>
`;

exports[`ChannelsListItem renders component with address 1`] = `
<WithStyles(ForwardRef(ListItem))
  button={true}
  className="root-mock"
  disableGutters={true}
  onClick={[Function]}
>
  <WithStyles(ForwardRef(ListItemText))
    className="itemText-mock"
    classes={
      Object {
        "primary": "primary-mock",
      }
    }
    primary={
      <ForwardRef(WithStyles)
        alignItems="center"
        container={true}
      >
        <ForwardRef(WithStyles)
          item={true}
        >
          <ForwardRef(WithStyles)
            className="title-mock newMessages-mock"
            variant="body2"
          >
            # Channel 1
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
    }
  />
</WithStyles(ForwardRef(ListItem))>
`;
